--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="content-wrapper">
       <div class="profile-section">
         <div class="profile-image">
-          <img src="pic.jpg" alt="Profile">
+          <img src="pic/pic.jpg" alt="Profile">
         </div>
       </div>
 
@@ -29,8 +29,8 @@
     <h1 class="name">Shkeljzen Baftijari</h1>
     <h3>I'm <span id="type-it" aria-live="polite"></span><span class="typed-cursor">|</span></h3>
         <p class="intro">
-          Welcome to my portfolio. I'm a creative professional passionate about building meaningful digital experiences.
-          With a focus on clean design and thoughtful implementation, I help bring ideas to life through modern web technologies.
+          Hi, and welcome to my portfolio! I’m passionate about crafting full‑stack web applications that are both functional and meaningful.  
+        <br/>I love combining clean design with thoughtful implementation to turn ideas into reality through modern web technologies.
         </p>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/shkelzen-baftijari/" class="social-icon" aria-label="LinkedIn">
@@ -44,6 +44,11 @@
               <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"></path>
             </svg>
           </a>        
+          <a href="#" class="social-icon" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
+            <svg width="25" height="25" viewBox="0 0 24 24" fill="currentColor" stroke="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M23.5 6.2a3 3 0 0 0-2.1-2.12C19.6 3.5 12 3.5 12 3.5s-7.6 0-9.4.58A3 3 0 0 0 .5 6.2 31.6 31.6 0 0 0 0 12a31.6 31.6 0 0 0 .5 5.8 3 3 0 0 0 2.1 2.12c1.8.58 9.4.58 9.4.58s7.6 0 9.4-.58a3 3 0 0 0 2.1-2.12A31.6 31.6 0 0 0 24 12a31.6 31.6 0 0 0-.5-5.8zM9.7 15.6V8.4L16 12l-6.3 3.6z"/>
+            </svg>
+          </a>
         </div>
       </div>
     </div>
@@ -149,95 +154,122 @@
 
   <section id="portfolio" class="section-content portfolio-section">
     <div class="container">
-      <h1 class="name text-center mb-5">Portfolio</h1>
+      <h1 class="name text-center mb-5">Portfolio / Work</h1>
 
       <div class="row g-4">
         <div class="col-12 col-md-6 col-lg-4">
           <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal1">
-            <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Project 1" class="project-image">
+            <img src="pic/credisaList.jpeg" alt="Credisa Project" class="project-image">
             <div class="project-content">
-              <h3 class="project-title">Project One</h3>
-              <p class="project-description">A modern web application built with cutting-edge technologies.</p>
+              <h3 class="project-title">Loan WebApp</h3>
+              <p class="project-description">A modern Loan Web application for CREDISA CH.</p>
             </div>
           </div>
         </div>
 
         <div class="col-12 col-md-6 col-lg-4">
           <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal2">
-            <img src="https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Project 2" class="project-image">
+            <img src="pic/winForm_DB.png" alt="Database design" class="project-image">
             <div class="project-content">
-              <h3 class="project-title">Project Two</h3>
-              <p class="project-description">An innovative solution for everyday challenges.</p>
+              <h3 class="project-title">MS-SQL Database Invoice Model</h3>
+              <p class="project-description">A database model designed for efficient Invoice.</p>
             </div>
           </div>
         </div>
 
         <div class="col-12 col-md-6 col-lg-4">
           <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal3">
-            <img src="https://images.pexels.com/photos/270632/pexels-photo-270632.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Project 3" class="project-image">
+            <img src="pic/apiDev.png" alt="API" class="project-image">
             <div class="project-content">
-              <h3 class="project-title">Project Three</h3>
-              <p class="project-description">Creative design meets functional development.</p>
+              <h3 class="project-title">API Endpoint</h3>
+              <p class="project-description">A structured API model for secure data exchange between services.</p>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="row g-4">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal4">
+            <img src="pic/fitnessWebsite.jpg" alt="Credisa Project" class="project-image">
+            <div class="project-content">
+              <h3 class="project-title">Old-Classic Fitness Website</h3>
+              <p class="project-description">A simple HTML fitness info website with class schedules and gallery.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal5">
+            <img src="pic/pizeria.jpg" alt="Project 2" class="project-image">
+            <div class="project-content">
+              <h3 class="project-title">A Pizzeria Website Reservation</h3>
+              <p class="project-description">A classic restaurant webpage showcasing menu, location, contact details and reseravtion.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="project-card" data-bs-toggle="modal" data-bs-target="#projectModal6">
+            <img src="pic/InvoiceWinform.jpg" alt="API" class="project-image">
+            <div class="project-content">
+              <h3 class="project-title">An Invoice Desktop Programm</h3>
+              <p class="project-description">A desktop application for creating and managing invoices efficinetly.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </section>
 
   <section id="contact" class="section-content contact-section">
-    <div class="container">
-      <h1 class="name text-center mb-5">Get In Touch</h1>
-      <div class="row align-items-center">
-        <div class="col-12 col-md-6 order-1">
-          <form class="contact-form">
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" id="name" name="name" required>
-            </div>
+  <div class="container">
+    <h1 class="name text-center mb-5">Get In Touch</h1>
 
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" required>
-            </div>
+    <div class="row align-items-center">
+      <!-- Left side: text -->
+      <div class="col-12 col-md-6">
+        <div class="contact-right">
+          <div class="contact-intro">
+            <p class="lead">
+              I'm always open to discussing new projects, creative ideas, or opportunities to be part of your vision.
+            
+             <ul class="contact-details list-unstyled mt-3">
+              <li><strong>Email:</strong> 
+                <a href="mailto:sh.baftijari@gmail.com">sh.baftijari@gmail.com</a>
+              </li>
+              <li class="mt-2"><strong>Location:</strong> Lindau (Bodensee), DE</li>
+            </ul>
 
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea id="message" name="message" required></textarea>
-            </div>
-
-            <button type="submit" class="submit-btn">Send Message</button>
-          </form>
-        </div>
-
-        <div class="col-12 col-md-6 order-2">
-          <div class="contact-right text-center">
-            <div class="profile-image mx-auto mb-4" style="width: 280px; height: 280px;">
-              <img src="getInTouch.png" alt="Contact">
-            </div>
-            <div class="contact-intro">
-              <p class="lead">Have a project in mind or want to say hello? I'm always open to discussing new projects, creative ideas, or opportunities to be part of your vision.</p>
-              <ul class="contact-details list-unstyled mt-3">
-                <li><strong>Email:</strong> <a href="mailto:sh.baftijari@gmail.com">sh.baftijari@gmail.com</a></li>
-                <li class="mt-2"><strong>Location:</strong> Lindau (Bodensee), DE</li>
-              </ul>
-            </div>
+            </p>
           </div>
         </div>
       </div>
+
+      <!-- Right side: image -->
+      <div class="col-12 col-md-6 text-center">
+        <div class="profile-image mx-auto mb-4" style="width: 280px; height: 280px; overflow: hidden;">
+          <img src="pic/getInTouch.png" alt="Contact" class="img-fluid rounded-circle w-100 h-100 object-fit-cover">
+        </div>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
 
   <div class="modal fade" id="projectModal1" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Project One</h5>
+          <h5 class="modal-title">Loan Web App</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Project 1" class="img-fluid">
+          <img src="pic/credisaList.jpeg" alt="Loan Webapp" class="img-fluid">
           <p class="mt-3">A modern web application built with cutting-edge technologies.</p>
         </div>
       </div>
@@ -248,12 +280,12 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Project Two</h5>
+          <h5 class="modal-title">Database Invoice model</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Project 2" class="img-fluid">
-          <p class="mt-3">An innovative solution for everyday challenges.</p>
+          <img src="pic/winForm_DB.png" alt="MS SQL" class="img-fluid">
+          <p class="mt-3">A database model designed for efficient Invoice and client management</p>
         </div>
       </div>
     </div>
@@ -263,57 +295,57 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Project Three</h5>
+          <h5 class="modal-title">API Endpoints</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="https://images.pexels.com/photos/270632/pexels-photo-270632.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Project 3" class="img-fluid">
-          <p class="mt-3">Creative design meets functional development.</p>
+          <img src="pic/apiDev.png" alt="API Endpoints" class="img-fluid">
+          <p class="mt-3">A structured API model for secure data exchange between services using Stored Procedures.</p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="projectModal1" tabindex="-1" aria-hidden="true">
+  <div class="modal fade" id="projectModal4" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Project One</h5>
+          <h5 class="modal-title">Fitness Website</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Project 1" class="img-fluid">
-          <p class="mt-3">A modern web application.</p>
+          <img src="pic/fitnessWebsite.jpg" alt="Project 1" class="img-fluid">
+          <p class="mt-3">A simple HTML fitness info website with class schedules and gallery.</p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="projectModal2" tabindex="-1" aria-hidden="true">
+  <div class="modal fade" id="projectModal5" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Project Two</h5>
+          <h5 class="modal-title">Pizzeria Website Reservation</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Project 2" class="img-fluid">
-          <p class="mt-3">An innovative solution for everyday challenges.</p>
+          <img src="pic/pizeria.jpg" alt="Project 2" class="img-fluid">
+          <p class="mt-3">A classic restaurant webpage showcasing menu, location, contact details and reseravtion.</p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="modal fade" id="projectModal3" tabindex="-1" aria-hidden="true">
+  <div class="modal fade" id="projectModal6" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Project Three</h5>
+          <h5 class="modal-title">Invoice WinForm-Programm</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="https://images.pexels.com/photos/270632/pexels-photo-270632.jpeg?auto=compress&cs=tinysrgb&w=1200" alt="Project 3" class="img-fluid">
-          <p class="mt-3">Creative design meets functional development.</p>
+          <img src="pic/InvoiceWinform.jpg" alt="Project 3" class="img-fluid">
+          <p class="mt-3">A desktop application for creating and managing invoices with ease.</p>
         </div>
       </div>
     </div>
