--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="content-wrapper">
       <div class="profile-section">
         <div class="profile-image">
-          <img src="pic/pic.jpg" alt="Profile">
+          <img src="pic/pic2.png" alt="Profile">
         </div>
       </div>
 
@@ -102,21 +102,21 @@
                 </div>
               </div>
               <div class="skill-item">
+                <div class="skill-name">PHP</div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 55%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
                 <div class="skill-name">Database Design</div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 65%"></div>
+                  <div class="skill-progress" style="width: 55%"></div>
                 </div>
               </div>
               <div class="skill-item">
                 <div class="skill-name">API Development</div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 70%"></div>
-                </div>
-              </div>
-              <div class="skill-item">
-                <div class="skill-name">Familiar with PHP / Java</div>
-                <div class="skill-bar">
-                  <div class="skill-progress" style="width: 30%"></div>
+                  <div class="skill-progress" style="width: 60%"></div>
                 </div>
               </div>
             </div>
@@ -310,7 +310,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Fitness Website</h5>
+          <h5 class="modal-title">A Classic Fitness Website</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -345,7 +345,7 @@
         </div>
         <div class="modal-body">
           <img src="pic/InvoiceWinform.jpg" alt="Project 3" class="img-fluid">
-          <p class="mt-3">A desktop application for creating and managing invoices with ease.</p>
+          <p class="mt-3">A desktop application for creating and managing invoices with ease for Small Companies.</p>
         </div>
       </div>
     </div>
