--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="text-section">
     <h1 class="name">Shkeljzen Baftijari</h1>
-    <h3>I'm <span id="type-it" aria-live="polite"></span><span class="typed-cursor">|</span></h3>
+    <h3><span id="type-it" aria-live="polite"></span><span class="typed-cursor">|</span></h3>
         <p class="intro">
           Hi, and welcome to my portfolio! I’m passionate about crafting full‑stack web applications that are both functional and meaningful.  
         <br/>I love combining clean design with thoughtful implementation to turn ideas into reality through modern web technologies.
